[PLAT-267] Including camera updates for Orthographic camera (#19)
* [PLAT-267] Updates for Orthographic cameras

* Test

* fixing test

* adding

* fixing tests

* add example back in

* fix
